<resources>
    <string name="app_name">Lithium Aktie</string>
    <string name="splash_title"><font color="#00D4FC"><b>Lithium </b></font><font color="#222525"><b>Aktie</b></font></string>
    <string name="click_back_again_to_exit">Klicken Sie zum Beenden erneut auf ZURÜCK</string>
    <string name="hello_blank_fragment">Hello_blank</string>
    <string name="Impressum">Impressum</string>
    <string name="home">Home</string>
    <string name="share_url">https://lithium-aktie.de/</string>
    <string name="datenschutzerklarung">Datenschutzerklärung</string>
    <string name="header_link">Interessenskonflikte &amp; Risikohinweise beachten</string>
    <string name="string2">Lithium Aktie</string>
    <string name="strong">Strong Buy</string>
    <string name="strong_buy_url">https://www.tradegate.de/orderbuch.php?lang=en&amp;isin=CA03880B1040</string>
    <string name="header_url">https://www.tradegate.de/orderbuch.php?lang=en&amp;isin=CA03880B1040</string>
    <string name="angaben">Angaben gemäß § 5 TMG</string>
    <string name="angaben_description">B-Part Am Gleisdeck\nLuckenwalder Straße 6b\n10963 Berlin-Kreuzberg\nDeutschland / Germany\n\nDiese vertreten durch:\nLuca Shultz\n\nE-Mail: info [at] lithium-aktie.de</string>
    <string name="inhaltlich">Inhaltlich Verantwortlicher gemäß § 5 TMG:</string>
    <string name="inhaltich_description">B-Part Am Gleisdeck\nLuckenwalder Straße 6b\n10963 Berlin-Kreuzberg\nDeutschland / Germany</string>
    <string name="IEU">IEU-Streitschlichtung</string>
    <string name="ieu_description">Die Europäische Kommission stellt eine Plattform zur Online-Streitbeilegung (OS) bereit: https://ec.europa.eu/consumers/odr/. Unsere E-Mail-Adresse finden Sie oben im Impressum.</string>
    <string name="verberu">Verbraucherstreitbeilegung/Universalschlichtungsstelle</string>
    <string name="verberu_description">Wir sind nicht bereit oder verpflichtet, an Streitbeilegungsverfahren vor einer Verbraucherschlichtungsstelle teilzu-\nnehmen.</string>
    <string name="haftung">Haftung für Inhalte</string>
    <string name="Haftung_description">Als Diensteanbieter sind wir gemäß § 7 Abs.1 TMG für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Nach §§ 8 bis 10 TMG sind wir als Diensteanbieter jedoch nicht verpflichtet, übermittelte oder gespeicherte fremde Informationen zu überwachen oder nach Umständen zu forschen, die auf eine rechtswidrige Tätigkeit hinweisen.Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben hiervon unberührt. Eine diesbezügliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung möglich. Bei Bekanntwerden von entsprechenden Rechtsverletzungen werden wir diese Inhalte umgehend entfernen.</string>
    <string name="haftungLink">Haftung für Links</string>
    <string name="Haftung_link_description">Unser Angebot enthält Links zu externen Websites Dritter, auf deren Inhalte wir keinen Einfluss haben. Deshalb können wir für diese fremden Inhalte auch keine Gewähr übernehmen. Für die Inhalte der verlinkten Seiten ist stets der jeweilige Anbieter oder Betreiber der Seiten verantwortlich. Die verlinkten Seiten wurden zum Zeitpunkt der Verlinkung auf mögliche Rechtsverstöße überprüft. Rechtswidrige Inhalte waren zum Zeitpunkt der Verlinkung nicht erkennbar.Eine permanente inhaltliche Kontrolle der verlinkten Seiten ist jedoch ohne konkrete Anhaltspunkte einer Rechtsverletzung nicht zumutbar. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Links umgehend entfernen.</string>
    <string name="Urheberrecht">Urheberrecht</string>
    <string name="Urheberrecht_description">Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen Urheberrecht. Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen des Urheberrechtes bedürfen der schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers. Downloads und Kopien dieser Seite sind nur für den privaten, nicht kommerziellen Gebrauch gestattet.\n\nSoweit die Inhalte auf dieser Seite nicht vom Betreiber erstellt wurden, werden die Urheberrechte Dritter beachtet. Insbesondere werden Inhalte Dritter als solche gekennzeichnet. Sollten Sie trotzdem auf eine Urheberrechtsverletzung aufmerksam werden, bitten wir um einen entsprechenden Hinweis. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Inhalte umgehend entfernen.</string>
    <string name="datenschutzerklarung_description">Wir freuen uns über Ihren Besuch auf unserer Webseite und Ihr Interesse für das Thema Datenschutz. Damit Sie wissen, wann wir welche personenbezogenen Daten erheben und wie wir diese Daten verwenden, nehmen Sie bitte die nachstehenden Informationen zur Kenntnis.</string>
    <string name="veran">‍Verantwortliche Stelle</string>
    <string name="veran_description">Verantwortlicher gem. Art. 4 Abs. 7 EU-\nDatenschutzgrundverordnung (DSGVO) ist\n\nB-Part Am Gleisdeck\nLuckenwalder Straße 6b\n10963 Berlin-Kreuzberg\nDeutschland / Germany\n\nE-Mail: info [at] lithium-aktie.de</string>
    <string name="erhebung_title">‍Erhebung, Verarbeitung und Nutzung personenbezogener Daten</string>
    <string name="erhebung_description">Die rechtlichen Grundlagen der Erhebung, Speicherung und Verarbeitung personenbezogener Daten finden sich insbesondere in der Datenschutzgrundverordnung (DSGVO) und Bundesdatenschutzgesetz (BDSG). Personenbezogene Daten sind Informationen, die sich auf eine identifizierte oder identifizierbare natürliche Person beziehen (Art. 4 Nr. 1 DSGVO). Hierzu gehören insbesondere Namen, Adressdaten, Telefonnummern oder E-Mail-Adressen. Aber auch Informationen über Vorlieben, Mitgliedschaften oder beispielsweise vorher besuchte Webseiten können personenbezogene Daten darstellen.</string>
    <string name="Kontak_title">Kontaktaufnahme</string>
    <string name="kontak_description">Sofern Sie mit uns in Kontakt treten (z.B. per E-Mail), werden die von Ihnen übermittelten Daten zum Zweck der Bearbeitung Ihrer Anfrage sowie zur möglichen Bearbeitung von Anschlussfragen gespeichert. Rechtsgrundlage für die Verarbeitung ist die Erforderlichkeit zur Durchführung vorvertraglicher Maßnahmen gemäß Art. 6 Abs. 1 b) DSGVO. Die in diesem Zusammenhang anfallenden Daten löschen wir, nachdem die Speicherung nicht mehr erforderlich ist, oder schränken die Verarbeitung ein, falls gesetzliche Aufbewahrungspflichten bestehen.</string>
    <string name="Ihre_title">Ihre Rechte</string>
    <string name="ihre_description">Sie haben gegenüber uns folgende Rechte hinsichtlich der Sie betreffenden personenbezogenen Daten:\n\n\t\u2022\t\tRecht auf Auskunft,\n\t\u2022\t\tRecht auf Berichtigung oder Löschung,\n\t\u2022\t\tRecht auf Einschränkung der Verarbeitung,\n\t\u2022\t\tRecht auf Widerspruch gegen die Verarbeitung,\n\t\u2022\t\tRecht auf Datenübertragbarkeit.\n\nSie haben zudem das Recht, sich bei einer Datenschutz-Aufsichtsbehörde über die Verarbeitung Ihrer personenbezogenen Daten durch uns zu beschweren.</string>
    <string name="Widerruf_title">Widerruf einer Einwilligung und Widerspruch gegen die Verarbeitung Ihrer Daten</string>
    <string name="widerruf_description">Wir weisen Sie darauf hin, dass Sie eine etwa erteilte Einwilligung zur Verarbeitung Ihrer Daten jederzeit widerrufen können. Ihr Widerruf hat allerdings keine Auswirkung auf bereits erfolgte Datenverarbeitungen in der Vergangenheit. Er entfaltet seine Wirkung lediglich für die Zukunft.\n\nSoweit wir die Verarbeitung Ihrer personenbezogenen Daten auf eine Interessen abwägung im Sinne des Art. 6 Abs. 1 f) DSGVO stützen, können Sie Widerspruch gegen die Verarbeitung einlegen. Eine Interessenabwägung führen wir insbesondere dann durch, wenn die Verarbeitung nicht zur Erfüllung eines Vertrags mit Ihnen erforderlich ist.Die jeweiligen Rechtsgrundlagen der verschiedenen Verarbeitungsprozesse entnehmen sie dieser Datenschutzerklärung. Bei Ausübung eines solchen Widerspruchs bitten wirSie um Darlegung der jeweiligen Gründe. Im Falle eines begründeten Widerspruchs prüfen wir die Sachlage und werden entweder die Datenverarbeitung einstellen bzw. anpassen oder Ihnen unsere zwingenden schutzwürdigen Gründe aufzeigen, aufgrund derer wir die Verarbeitung fortführen.\n\nFerner können Sie der Verarbeitung Ihrer personenbezogenen Daten für Zwecke der Werbung und Datenanalyse jederzeit widersprechen. Über Ihren Werbewiderspruch können Sie uns unter den oben genannten Kontaktdaten informieren.</string>
    <string name="Weitergabe_title">Weitergabe an Dritte</string>
    <string name="Weitergabe_description">Wir übermitteln Ihre personenbezogenen Daten an Dritte, soweit dies zur Ausführung von Verträgen erforderlich ist. Rechtsgrundlage für die Übermittlung ist die Erforderlichkeit zur Erfüllung eines Vertrages gemäß Art. 6 Abs. 1 b) DSGVO. Eine Weitergabe personenbezogener Daten an Dritte zu Vermarktungs- oder Werbezwecken findet ohne Ihre ausdrückliche Einwilligung nicht statt.</string>
    <string name="Newsletter_title">Newsletter</string>
    <string name="form_submit">Das Formular wurde erfolgreich versendet.</string>
    <string name="alert">Alarm</string>
    <string name="ok">OK</string>
</resources>